--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -2,7 +2,7 @@ config:
   credentials: []
   project_repos:
     github.com/EOSC-synergy/sqaaas-tooling:
-      branch: release/2.0.0
+      branch: feature/fair-epos-prototype
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
     github.com/m-team-kit/cookiecutter-web:
       branch: main
@@ -15,28 +15,52 @@ sqa_criteria:
     repos:
       github.com/m-team-kit/cookiecutter-web git:
         commands:
-        - /usr/bin/env sh .sqa/script.squirrely-magenta-rabbit.sh
-        container: qc.acc_stealthy-alizarin-giraffe
+        - /usr/bin/env sh .sqa/script.droopy-ivory-ladybird.sh
+        container: qc.acc_smelly-champagne-binturong
   QC.Doc:
     repos:
       github.com/m-team-kit/cookiecutter-web find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.crappy-purple-avocet.sh
-        container: qc.doc_leaky-buff-bordeaux
+        - /usr/bin/env sh .sqa/script.tacky-platinum-bandicoot.sh
+        container: qc.doc_trippy-coral-bandicoot
       github.com/m-team-kit/cookiecutter-web git:
         commands:
-        - /usr/bin/env sh .sqa/script.pretty-alizarin-mist.sh
-        container: qc.doc_chewy-lavender-dingo
+        - /usr/bin/env sh .sqa/script.zippy-violet-tarantula.sh
+        container: qc.doc_trippy-gamboge-bullfrog
+      github.com/m-team-kit/cookiecutter-web markdownlint:
+        commands:
+        - /usr/bin/env sh .sqa/script.wiggy-orange-cuscus.sh
+        container: qc.doc_snazzy-green-lion
   QC.Lic:
     repos:
       github.com/m-team-kit/cookiecutter-web licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.seedy-burgundy-tarantula.sh
-        container: qc.lic_thirsty-amber-axolotl
+        - /usr/bin/env sh .sqa/script.hasty-azure-mau.sh
+        container: qc.lic_slaphappy-orange-macaw
+  QC.Met:
+    repos:
+      github.com/m-team-kit/cookiecutter-web cff-converter-python:
+        commands:
+        - /usr/bin/env sh .sqa/script.ugly-bistre-saola.sh
+        container: qc.met_droopy-beige-ragdoll
+      github.com/m-team-kit/cookiecutter-web validate_codemeta:
+        commands:
+        - /usr/bin/env sh .sqa/script.shabby-goldenrod-chow.sh
+        container: qc.met_cranky-yellow-guppy
+  QC.Sty:
+    repos:
+      github.com/m-team-kit/cookiecutter-web hadolint:
+        commands:
+        - /usr/bin/env sh .sqa/script.randy-brown-tortoise.sh
+        container: qc.sty_boozy-crimson-cat
+      github.com/m-team-kit/cookiecutter-web jsonlint:
+        commands:
+        - /usr/bin/env sh .sqa/script.wimpy-gamboge-llama.sh
+        container: qc.sty_goopy-sangria-lynx
   QC.Ver:
     repos:
       github.com/m-team-kit/cookiecutter-web get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.nerdy-dandelion-setter.sh
-        container: qc.ver_goopy-platinum-moose
+        - /usr/bin/env sh .sqa/script.flabby-ecru-crane.sh
+        container: qc.ver_tasty-gamboge-boar
 timeout: 5400
